--- a/style.css
+++ b/style.css
@@ -1,8 +1,53 @@
 
 
+body
+{
+    font-size: 12px;
+}
+
 h1
 {
     font-weight: bold;
+    margin-top: 10px;
+    margin-bottom: 20px;
+}
+
+h2
+{
+    font-size: 22px;
+    margin-bottom: 20px;
+    margin-top: 10px;
+}
+
+h3
+{
+    font-size: 17px;
+    font-weight: bold;
+}
+
+.blue
+{
+    color: #5982BD;
+}
+
+.grey
+{
+    color: #727176;
+}
+
+.orange
+{
+    color: #ffba00;
+}
+
+.white
+{
+    color: #ffffff;
+}
+
+.white a, .white a:hover
+{
+    color: #ffffff;
 }
 
 a
@@ -14,6 +59,11 @@ a
     max-width: 500px;
 }
 
+.bullet
+{
+    margin-right: 5px;
+}
+
 .clear-highlighted-box
 {
     background-color: rgba(255, 255, 255, 0.2);
@@ -22,13 +72,17 @@ a
     color: #ffffff;
 }
 
-.white-text, .white-text a, .white-text a:hover
+.bordered-highlighted-box
 {
-    color: #ffffff;
+    background-color: #ffffff;
+    border-radius: 15px;
+    border: 6px;
+    border-style: solid;
+    border-color: #FFE1A6;
 }
 
-.bullet
+.checklist-bullet
 {
-    margin-right: 5px;
+    list-style-image: url('img/bullet.jpg');
 }
 
