Add 11, 12, 13, 14 and 15 pages.
The following pages were added: 11, 12, 13, 14 and 15.

Some classes were added to style.css.

--- a/style.css
+++ b/style.css
@@ -53,6 +53,12 @@ h3
     color: #ffba00;
 }
 
+.aquamarine
+{
+    color: #04a089;
+}
+
+
 .white
 {
     color: #ffffff;
@@ -88,6 +94,13 @@ a
     border-radius: 7px;
     padding: 15px 15px 5px;
     color: #ffffff;
+}
+
+.blue-highlighted-box
+{
+    background-color: #eff5f4;
+    border-radius: 7px;
+    padding: 15px 15px 5px;
 }
 
 .bordered-highlighted-box
