Add final pages
The following pages were added: 22 to 32.

An All-In-One page was added.

Some minor changes were made to some pages.

Some classes were added to styles.css

--- a/style.css
+++ b/style.css
@@ -53,6 +53,11 @@ h3
     color: #ffba00;
 }
 
+.dark-orange
+{
+    color: #C2A760;
+}
+
 .aquamarine
 {
     color: #04a089;
@@ -87,9 +92,15 @@ a
     margin-right: 5px;
 }
 
-.checklist-bullet
+.checklist-bullet-orange
 {
     list-style-image: url('img/bullet.jpg');
+}
+
+.checklist-bullet-cyan
+{
+    list-style-image: url('img/bullet-cyan.jpg');
+    padding-left: 18px;
 }
 
 .clear-highlighted-box
@@ -110,6 +121,13 @@ a
 .blue-highlighted-box
 {
     background-color: #edf4f3;
+    border-radius: 7px;
+    padding: 15px 15px 5px;
+}
+
+.darkorange-highlighted-box
+{
+    background-color: #F5EEE1;
     border-radius: 7px;
     padding: 15px 15px 5px;
 }
@@ -135,5 +153,4 @@ a
 {
     margin-top: 15px;
 }
-
 
